--- a/package.json
+++ b/package.json
@@ -10,10 +10,18 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/netinfo": "^12.0.1",
+    "@react-native/new-app-screen": "0.84.0",
+    "@tanstack/query-async-storage-persister": "^5.90.22",
+    "@tanstack/react-query": "^5.90.21",
+    "@tanstack/react-query-persist-client": "^5.90.22",
+    "axios": "^1.13.5",
     "react": "19.2.3",
     "react-native": "0.84.0",
-    "@react-native/new-app-screen": "0.84.0",
-    "react-native-safe-area-context": "^5.5.2"
+    "react-native-mmkv": "^4.1.2",
+    "react-native-nitro-modules": "^0.33.9",
+    "react-native-safe-area-context": "^5.5.2",
+    "zustand": "^5.0.11"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
